// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering when submitting should disable all input fields 1`] = `
<CollapsiblePanel
  label="UserProfile.GeneralInfoPanel.title"
>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={true}
      title="UserProfile.GeneralInfoPanel.firstName"
    />
    <Stack
      alignItems="stretch"
      scale="s"
    >
      <TextInput
        horizontalConstraint="scale"
        isDisabled={true}
        name="firstName"
        onChange={[MockFunction]}
        value="John"
      />
    </Stack>
  </FormBox>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={true}
      title="UserProfile.GeneralInfoPanel.lastName"
    />
    <Stack
      alignItems="stretch"
      scale="s"
    >
      <TextInput
        horizontalConstraint="scale"
        isDisabled={true}
        name="lastName"
        onChange={[MockFunction]}
        value="Snow"
      />
    </Stack>
  </FormBox>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={false}
      title="UserProfile.GeneralInfoPanel.email"
    />
    <TextInput
      horizontalConstraint="scale"
      isDisabled={true}
      name="email"
      onChange={[MockFunction]}
      value="john@snow.got"
    />
  </FormBox>
</CollapsiblePanel>
`;

exports[`rendering when there are no errors should ensure layout structure 1`] = `
<CollapsiblePanel
  label="UserProfile.GeneralInfoPanel.title"
>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={true}
      title="UserProfile.GeneralInfoPanel.firstName"
    />
    <Stack
      alignItems="stretch"
      scale="s"
    >
      <TextInput
        horizontalConstraint="scale"
        isDisabled={false}
        name="firstName"
        onChange={[MockFunction]}
        value="John"
      />
    </Stack>
  </FormBox>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={true}
      title="UserProfile.GeneralInfoPanel.lastName"
    />
    <Stack
      alignItems="stretch"
      scale="s"
    >
      <TextInput
        horizontalConstraint="scale"
        isDisabled={false}
        name="lastName"
        onChange={[MockFunction]}
        value="Snow"
      />
    </Stack>
  </FormBox>
  <FormBox
    hasWarning={false}
  >
    <LabelField
      isRequired={false}
      title="UserProfile.GeneralInfoPanel.email"
    />
    <TextInput
      horizontalConstraint="scale"
      isDisabled={true}
      name="email"
      onChange={[MockFunction]}
      value="john@snow.got"
    />
  </FormBox>
</CollapsiblePanel>
`;
